[package]
name = "version-rs"
version = "0.2.0"
authors = ["Ian Wahbe <@iwahbe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A struct for Versions, with the methods you expect"
repository = "https://github.com/iwahbe/version-rs"
readme = "README.md"
keywords = ["version"]
categories = ["data-structures"]

[features]
default = []
serde-derive = ["serde/derive"]
lossy = []

[dependencies]
serde = { version = "1", optional = true }
